--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    My Furniture
                                 </div>
                             </div>
                         </div>
