--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About Me</h2>
                     <hr class="light">
-                    <p class="text-faded">My name is Ahmed Qureshi, I'm a B.Sc(IT) graduate from Mumbai university. I'm 20 years old 
+                    <p class="text-faded">My name is Ahmad Qureshi, I'm a B.Sc(IT) graduate from Mumbai university. I'm 20 years old 
 					and deeply passionate about creating new designs and working on web projects, mainly in Java.  
 					I'm looking to work for people who have same vision and passion as I do.
 					</p>
